Added /persons/{id} endpoint
